--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,21 @@
+@font-face {
+    font-family: 'iconfont';
+    src: url('iconfont.eot'); /* IE9*/
+    src: url('iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('iconfont.woff')  format('woff'), /* chrome、firefox */
+    url('iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+
+.iconfont{
+    font-family:"iconfont" !important;
+    font-size:16px;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -105,4 +123,34 @@ figcaption .img-back p{
 }
 /* img-item -- start */
 
+.controller-nav .controller-unit {
+    display: inline-block;
 
+    margin: 0 5px;
+    width: 30px;
+    height: 30px;
+
+    text-align: center;
+    vertical-align: middle;
+
+    cursor: pointer;
+    background-color: #aaa;
+    border-radius: 50%;
+
+    transform: scale(0.5);
+    transition: transform .6s ease-in-out, background-color .3s;
+}
+.controller-nav .is-center {
+    background-color: #888;
+    transform: scale(1);
+}
+.controller-nav .is-center .zuoxuanzhuan::after {
+    line-height: 30px;
+    color: #fff;
+    content: '\e600';
+}
+
+.controller-nav .is-reverse {
+    background-color: #555;
+    transform: rotateY(180Deg);
+}
